# sharc

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  cipher.h
.github/workflows/: ci.yml
Sharc/Sharc/: Sharc.1  main.c
Sharc/Sharc.xcodeproj/: project.pbxproj
src/: Cipher.cpp  Cipher.h  Cipherz.h  Dictionary.h  DirectHashCipher.cpp  DirectHashCipher.h  DistanceCipher.cpp  DistanceCipher.h  Entry.h  FastLZW.cpp  FastLZW.h  HashCipher.cpp  HashCipher.h  HashFunction.h  LZW.cpp  LZW.h  LookupCipher.cpp  LookupCipher.h  Main.cpp  Makefile  Sharc.cpp  Sharc.h  SharcCipher.cpp  SharcCipher.h  SharcEncoder.cpp  SharcEncoder.h  SharcWriter.cpp  SharcWriter.h  Sharcz.h  SubsWriter.cpp  SubsWriter.h  Types.h  XORHashCipher.cpp  XORHashCipher.h  algorithm.rs  api.c  api.h  api_buffers.c  api_buffers.h  api_stream.c  (+87 more)
src/argonaut/: dictionary.c  dictionary.h  encode.c
src/basic/: Dictionary.cpp  Dictionary.h  Entry.cpp  Entry.h  LZWBasic.cpp  LZWBasic.h
src/blocks/: Makefile  block.h  block_decode.c  block_decode.h  block_encode.c  block_encode.h  block_header.c  block_header.h  block_mode_marker.c  block_mode_marker.h
src/default/: DefaultDictionary.cpp  DefaultDictionary.h  DefaultEntry.cpp  DefaultEntry.h  DefaultLZW.cpp  DefaultLZW.h
src/hashes/: BernsteinHash.cpp  BernsteinHash.h  CHash1.cpp  CHash1.h  DefaultHash.cpp  DefaultHash.h  MurmurHash3.cpp  MurmurHash3.h  NehalemHash.cpp  NehalemHash.h  SdbmHash.cpp  SdbmHash.h
src/kernels/: Makefile  kernel_decode.h  kernel_encode.h
src/kernels/argonaut/: Makefile  argonaut.h  argonaut_dictionary.c  argonaut_dictionary.h  argonaut_encode.c  argonaut_encode.h  argonaut_le.data
src/kernels/blocks/: Makefile
src/kernels/chameleon/: Makefile  chameleon.h  (+6 more)
src/sharc/: CHANGELOG.md
(+10 files in other folders)
