[package]
name = "sharc"
version = "0.1.2"
edition = "2024"
description = "Simple, high-speed archiver using the density compression library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/g1mv/sharc"
authors = ["Guillaume Voirin"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false

[dependencies]
density-rs = "0.16.6"
memmap2 = "0.9.9"
seahash = "4.1.0"
rayon = "1.11.0"
clap = { version = "4.5.56", features = ["derive"] }
